[workspace]
members = ["components/lt_quiz_core", "components/stdx", "components/lt_quiz"]
resolver = "2"

[workspace.dependencies]
stdx = { path = "./components/stdx" }

wca = { git = "https://github.com/Wandalen/wTools.git", branch = "alpha" }
lazy_format = "2.0"
itertools = "0.11"
expect-test = "1.4"
miette = { version = "5.10", features = ["fancy"] }

[patch.crates-io]
plist = { git = "https://github.com/f01dab1e/rust-plist.git" }

[workspace.lints.rust]
unused_qualifications = "deny"
unreachable_pub = "deny"
missing_debug_implementations = "deny"
missing_docs = "deny"
elided_lifetimes_in_paths = "deny"

[workspace.lints.clippy]
use_self = "deny"
