[package]
name = "lt_quiz"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy-regex = "2.5"
wca.workspace = true
itertools.workspace = true
lazy_format.workspace = true
miette.workspace = true
stdx.workspace = true
lt_quiz_core = { path = "../lt_quiz_core" }

home = "0.5"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
silicon = { version = "0.5", default-features = false, features = ["anyhow"] }
syntect = "5.0"
rusqlite = { version = "0.29", features = ["bundled"]}
serde_json = "1.0"
anymap = "0.12"

[dev-dependencies]
expect-test = "1.4"
